alaska no longer cut off

--- a/css/main.css
+++ b/css/main.css
@@ -268,7 +268,7 @@ h1 small {
 	background-color:rgb(0, 173, 220);
 }
 #searchContainer li:not(#searchDrop) {
-	margin-bottom:-8px;
+	margin-bottom:-7px;
 	padding-bottom:8px;
 }
 #searchDrop{
